php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47027 var_export doesn't show numeric indices on ArrayObject
Submitted: 2009-01-07 12:47 UTC Modified: 2009-01-07 14:37 UTC
From: dennis at born05 dot nl Assigned: derick (profile)
Status: Closed Package: SPL related
PHP Version: 5.2.8 OS: Fedora Core 6
Private report: No CVE-ID: None
 [2009-01-07 12:47 UTC] dennis at born05 dot nl
Description:
------------
When invoking var_export on an ArrayObject instance it doesn't show 
the numeric indices.

Reproduce code:
---------------
$ao = new ArrayObject(array (2 => "foo", "bar" => "baz"));
var_export ($ao);

Expected result:
----------------
ArrayObject::__set_state(array(
   2 => 'foo',
   'bar' => 'baz',
))

Actual result:
--------------
ArrayObject::__set_state(array(
   'bar' => 'baz',
))

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-01-07 13:31 UTC] dennis at born05 dot nl
FYI, I have just confirmed the same behaviour in 5.3.0alpha3.
 [2009-01-07 13:50 UTC] derick@php.net
It's ok... I've a fix which I am just testing.
 [2009-01-07 14:37 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 23 14:00:02 2026 UTC