- Fixed bug #47027 (var_export doesn't show numeric indices on ArrayObject).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@272963 c90b9560-bf6c-de11-be94-00142212c4b1